--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <groupId>com.demo</groupId>
   <artifactId>hello-world-starter</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>war</packaging>
 
   <name>hello-world-starter</name>
   <!-- FIXME change it to the project's website -->
